Put RAG pipeline behind a feature flag.
Signed-off-by: Austin Lee <austin@aryn.ai>